--- a/index.html
+++ b/index.html
@@ -119,6 +119,22 @@
       width: 100%;
       height: 100%;
     }
+
+    .category-icons {
+      margin-top: 30px;
+      font-size: 14px;
+    }
+
+    .category-icons div {
+      display: inline-block;
+      margin: 0 30px;
+      text-align: center;
+    }
+
+    .category-icons img {
+      width: 50px;
+      height: auto;
+    }
   </style>
 </head>
 <body>
@@ -133,6 +149,22 @@
 <div class="monster-container" id="monsters"></div>
 
 <div class="word-pool" id="wordPool"></div>
+
+<!-- Category Icons -->
+<div class="category-icons">
+  <div>
+    <img src="https://i.imgur.com/animal-monster.png"  alt="Animal Monster">
+    <p>Animals</p>
+  </div>
+  <div>
+    <img src="https://i.imgur.com/color-monster.png"  alt="Color Monster">
+    <p>Colors</p>
+  </div>
+  <div>
+    <img src="https://i.imgur.com/fruit-monster.png"  alt="Fruit Monster">
+    <p>Fruits</p>
+  </div>
+</div>
 
 <button id="resetButton">🔄 Reset Game</button>
 <button id="restartButton">🔁 Restart</button>
@@ -154,9 +186,9 @@
 
 <script>
   const monsters = [
-    { name: "Animal Lover", normalImg: "https://i.imgur.com/7YNsXzN.png",  words: ["dog", "cat", "lion", "tiger", "fish", "zebra"] },
-    { name: "Color Monster", normalImg: "https://i.imgur.com/tQk9CLw.png",  words: ["red", "blue", "green", "orange", "black", "white"] },
-    { name: "Fanatic Toys", normalImg: "https://i.imgur.com/mZMBjWY.png",  words: ["doll", "ball", "teddy", "plane", "car", "robot"] }
+    { name: "Animal Lover", normalImg: "https://i.imgur.com/animal-monster.png",  words: ["dog", "cat", "lion"] },
+    { name: "Color Monster", normalImg: "https://i.imgur.com/color-monster.png",  words: ["red", "blue", "green"] },
+    { name: "Fruit Fanatic", normalImg: "https://i.imgur.com/fruit-monster.png",  words: ["apple", "banana", "grape"] }
   ];
 
   let score = 0;
@@ -235,9 +267,6 @@
   function highlightCurrentMonster() {
     document.querySelectorAll('.monster').forEach((el, i) => {
       el.classList.remove('active');
-      const mouth = el.querySelector('.mouth img');
-      const idx = parseInt(el.id.split('-')[1]);
-      mouth.src = monsters[idx].normalImg;
       if (i === currentMonsterIndex) {
         el.classList.add('active');
       }
@@ -272,7 +301,7 @@
       setTimeout(() => {
         element.remove();
         removeWordFromMonster(word);
-        selectRandomMonster(); // Highlight next random monster
+        selectRandomMonster(); // Next random monster
       }, 700);
     } else {
       const monsterEl = document.getElementById(`monster-${currentMonsterIndex}`);
