--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: 'Comic Sans MS', cursive, sans-serif;
       background-color: #fffbe6;
       text-align: center;
-      padding: 20px;
+      padding: 25px;
       margin: 0;
     }
 
@@ -20,7 +20,7 @@
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
-      gap: 20px;
+      gap: 23px;
       margin-top: 30px;
     }
 
@@ -52,7 +52,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 10px;
+      gap: 12px;
     }
 
     .word {
@@ -153,15 +153,15 @@
 <!-- Category Icons -->
 <div class="category-icons">
   <div>
-    <img src="https://i.imgur.com/animal-monster.png"  alt="Animal Monster">
+    <https://i.pinimg.com/736x/f5/dc/84/f5dc847da02158d55552e7b06e121053.jpg"  alt="Animal Monster">
     <p>Animals</p>
   </div>
   <div>
-    <img src="https://i.imgur.com/color-monster.png"  alt="Color Monster">
+    <https://avatars.mds.yandex.net/i?id=9c6b7d1ed9518f25e5dbea0f424e7085_l-5249900-images-thumbs&ref=rim&n=13&w=900&h=900"  alt="Color Monster">
     <p>Colors</p>
   </div>
   <div>
-    <img src="https://i.imgur.com/fruit-monster.png"  alt="Fruit Monster">
+    <https://w7.pngwing.com/pngs/199/277/png-transparent-cartoon-monster-monster-mammal-carnivoran-head.png"  alt="Fruit Monster">
     <p>Fruits</p>
   </div>
 </div>
