--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       font-family: 'Comic Sans MS', cursive, sans-serif;
       background-color: #fffbe6;
       text-align: center;
-      padding: 25px;
+      padding: 20px;
       margin: 0;
     }
 
@@ -20,7 +20,7 @@
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
-      gap: 23px;
+      gap: 20px;
       margin-top: 30px;
     }
 
@@ -52,11 +52,11 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 12px;
+      gap: 16px;
     }
 
     .word {
-      padding: 8px 12px;
+      padding: 10px 14px;
       background-color: #e0e0ff;
       border-radius: 8px;
       cursor: pointer;
@@ -81,12 +81,11 @@
       font-size: 18px;
     }
 
-    button#resetButton, button#restartButton {
+    button#restartButton {
       margin-top: 20px;
       padding: 10px 20px;
       font-size: 16px;
       cursor: pointer;
-      display: none;
     }
 
     #victoryScreen {
@@ -153,27 +152,25 @@
 <!-- Category Icons -->
 <div class="category-icons">
   <div>
-    <https://i.pinimg.com/736x/f5/dc/84/f5dc847da02158d55552e7b06e121053.jpg"  alt="Animal Monster">
+    <img src="https://i.imgur.com/animal-monster.png"  alt="Animal Monster">
     <p>Animals</p>
   </div>
   <div>
-    <https://avatars.mds.yandex.net/i?id=9c6b7d1ed9518f25e5dbea0f424e7085_l-5249900-images-thumbs&ref=rim&n=13&w=900&h=900"  alt="Color Monster">
+    <img src="https://i.imgur.com/color-monster.png"  alt="Color Monster">
     <p>Colors</p>
   </div>
   <div>
-    <https://w7.pngwing.com/pngs/199/277/png-transparent-cartoon-monster-monster-mammal-carnivoran-head.png"  alt="Fruit Monster">
+    <img src="https://i.imgur.com/fruit-monster.png"  alt="Fruit Monster">
     <p>Fruits</p>
   </div>
 </div>
 
-<button id="resetButton">🔄 Reset Game</button>
-<button id="restartButton">🔁 Restart</button>
+<button id="restartButton">🔁 Restart Game</button>
 
 <!-- Victory Screen -->
 <div id="victoryScreen">
   <h1>🎉 You Win!</h1>
   <p>Your final score: <span id="finalScore">0</span></p>
-  <button id="playAgainBtn">🔁 Play Again</button>
 </div>
 
 <!-- Confetti Canvas -->
@@ -182,7 +179,6 @@
 <!-- Sound Effects -->
 <audio id="eatSound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_4f2d996b58.mp3"></audio> 
 <audio id="screamSound" src="https://cdn.pixabay.com/audio/2021/09/17/audio_f9a305cd45.mp3"></audio> 
-<audio id="happySound" src="https://www.soundjay.com/human/sounds/applause-8.mp3"></audio> 
 
 <script>
   const monsters = [
@@ -213,7 +209,6 @@
 
   const eatSound = document.getElementById('eatSound');
   const screamSound = document.getElementById('screamSound');
-  const happySound = document.getElementById('happySound');
 
   function initGame() {
     resetGame();
@@ -234,7 +229,7 @@
     if (timerInterval) clearInterval(timerInterval);
     victoryScreen.style.display = 'none';
     confetti = [];
-    document.getElementById("restartButton").style.display = "none";
+    currentMonsterIndex = -1;
   }
 
   function initMonsters() {
@@ -347,20 +342,15 @@
       timerDisplay.textContent = timeLeft;
       if (timeLeft <= 0) {
         clearInterval(timerInterval);
-        endGame("⏰ Time's up!");
+        alert("⏰ Time's up!");
       }
     }, 1000);
-  }
-
-  function endGame(message) {
-    alert(`${message} Your score: ${score}`);
   }
 
   function showVictory() {
     finalScore.textContent = score;
     victoryScreen.style.display = 'flex';
     launchConfetti(window.innerWidth / 2, window.innerHeight / 2);
-    document.getElementById("restartButton").style.display = "inline-block";
   }
 
   // Confetti Effect
@@ -418,10 +408,8 @@
     });
   }
 
-  // Event listeners
-  document.getElementById('resetButton').addEventListener('click', initGame);
+  // Restart Button
   document.getElementById('restartButton').addEventListener('click', initGame);
-  document.getElementById('playAgainBtn').addEventListener('click', initGame);
 
   // Start game on load
   window.onload = initGame;
