--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
     }
 
     .word {
-      padding: 10px 14px;
+      padding: 14px 18px;
+      font-size: 18px;
+      margin: 10px;
       background-color: #e0e0ff;
-      border-radius: 8px;
+      border-radius: 12px;
+      min-width: 100px; 
+      text-align: center;
       cursor: pointer;
       transition: background-color 0.2s;
     }
