--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
 <!-- Category Icons -->
 <div class="category-icons">
   <div>
-    <img src="https://i.imgur.com/animal-monster.png"  alt="Animal Monster">
+    <img src="https://i.imgur.com/bhil4ju.png"  alt="Animal Monster">
     <p>Animals</p>
   </div>
   <div>
-    <img src="https://i.imgur.com/color-monster.png"  alt="Color Monster">
+    <img src="https://i.imgur.com/VmW5HRi.png"  alt="Color Monster">
     <p>Colors</p>
   </div>
   <div>
-    <img src="https://i.imgur.com/fruit-monster.png"  alt="Fruit Monster">
+    <img src="https://i.imgur.com/fW19VWN.png"  alt="Fruit Monster">
     <p>Fruits</p>
   </div>
 </div>
