--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
 
 <script>
   const monsters = [
-    { name: "Animal Lover", normalImg: "https://imgur.com/fW19VWN",  words: ["dog", "cat", "lion","tiger", "horse", "hamster"] },
-    { name: "Color Monster", normalImg: "https://imgur.com/VmW5HRi",  words: ["red", "blue", "green", "orange", "yellow", "purple"] },
-    { name: "Fruit Fanatic", normalImg: "https://imgur.com/bhil4ju",  words: ["apple", "banana", "grape", "plum", "apricot", "peach"] }
+    { name: "Animal Lover", normalImg: "https://i.imgur.com/bhil4ju.png",  words: ["dog", "cat", "lion","tiger", "horse", "hamster"] },
+    { name: "Color Monster", normalImg: "https://i.imgur.com/VmW5HRi.png",  words: ["red", "blue", "green", "orange", "yellow", "purple"] },
+    { name: "Fruit Fanatic", normalImg: "https://i.imgur.com/fW19VWN.png",  words: ["apple", "banana", "grape", "plum", "apricot", "peach"] }
   ];
 
   let score = 0;
