--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       margin: 10px;
       background-color: #e0e0ff;
       border-radius: 12px;
-      min-width: 100px; 
+      min-width: 100px;
       text-align: center;
       cursor: pointer;
       transition: background-color 0.2s;
@@ -186,7 +186,7 @@
 
 <script>
   const monsters = [
-    { name: "Animal Lover", normalImg: "https://i.imgur.com/bhil4ju.png",  words: ["dog", "cat", "lion","tiger", "horse", "hamster"] },
+    { name: "Animal Lover", normalImg: "https://i.imgur.com/bhil4ju.png",  words: ["dog", "cat", "lion", "tiger", "horse", "hamster"] },
     { name: "Color Monster", normalImg: "https://i.imgur.com/VmW5HRi.png",  words: ["red", "blue", "green", "orange", "yellow", "purple"] },
     { name: "Fruit Fanatic", normalImg: "https://i.imgur.com/fW19VWN.png",  words: ["apple", "banana", "grape", "plum", "apricot", "peach"] }
   ];
@@ -300,7 +300,7 @@
       setTimeout(() => {
         element.remove();
         removeWordFromMonster(word);
-        selectRandomMonster(); // Next random monster
+        selectRandomMonster(); // Highlight next monster
       }, 700);
     } else {
       const monsterEl = document.getElementById(`monster-${currentMonsterIndex}`);
