--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 <body>
 
 <h1>Feed the Hungry Monsters! 👻</h1>
+<p style="font-size: 16px; color: #888; margin-top: -10px;">by Olga Timofeeva</p>
 
 <div class="score-timer">
   Score: <span id="score">0</span> |
