--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
 <body>
 
 <h1>Feed the Hungry Monsters! 👻</h1>
-<p style="font-size: 16px; color: #888; margin-top: -10px;">by Olga Timofeeva</p>
+<p style="font-size: 16px; color: #888; margin-top: -10px;">
+  by <a href="https://vk.com/club221025676"  target="_blank" style="color: #555; text-decoration: none;">Olga Timofeeva</a>
+</p>
 
 <div class="score-timer">
   Score: <span id="score">0</span> |
